fixing weird scrollbar behavior

--- a/src/app/control-center/control-center-sidebar/control-center-sidebar.component.scss
+++ b/src/app/control-center/control-center-sidebar/control-center-sidebar.component.scss
@@ -21,7 +21,7 @@
   }
 
   .sidebar-items {
-    overflow: scroll;
+    overflow: auto;
 
     .sidebar-item {
       &:first-child {
